--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -56,35 +56,35 @@
     margin-bottom: 0;
     border-radius: 4px;
     transition: background-color .2s, transform .2s;
+    margin-right: 16px;
+    margin-left: 16px;
 }
 
 .carouseltitle{
-    margin-top: 32px;
+    margin: 32px 16px 0;
     font-weight: var(--text-weight-bold);
-    margin-bottom: 0px;
 }
 
 .locationContainer {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 32px;
+    margin: 32px 8px 0;
 }
 
 .location {
-    color: white;
-    border-radius: 32px;
-    padding: 8px 16px;
-    margin: 8px 8px;
-    font-weight: var(--text-weight-bold);
-    flex: 0 1 148px;
-    background: white;
-    box-shadow: 0px 6px 16px rgb(0 0 0 / 12%);
-    text-align: center;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    transition: all 0.2s ease-in;
+    background: white;
+    border-radius: 32px;
+    box-shadow: 0px 6px 16px rgb(0 0 0 / 12%);
     color: #0087D3;
+    display: flex;
+    flex: 0 1 148px;
+    font-weight: var(--text-weight-bold);
+    justify-content: center;
+    margin: 8px 8px;
+    padding: 8px 16px;
+    text-align: center;
+    transition: all 0.2s ease-in;
 }
 
 .location.active {
