--- a/src/components/MaxWidth/styles.module.css
+++ b/src/components/MaxWidth/styles.module.css
@@ -1,5 +1,4 @@
 .container{
   max-width: 720px;
   margin: auto;
-  padding: 0 16px;
 }
